# reductive

./: .build.yml  .gitignore  .travis.yml  Cargo.toml  NOTICE  README.md  ci.nix  default.nix
.builds/: rust-lowerbound.yml  rust-stable.yml
.github/: dependabot.yml
.github/workflows/: rust.yml  test.yml
benches/: linalg.rs  pq.rs
ci/: script.sh
nix/: sources.json
src/: error.rs  kmeans.rs  lib.rs  linalg.rs  ndarray_rand.rs  pq.rs  rng.rs
src/pq/: gaussian_opq.rs  mod.rs  opq.rs  pq.rs  precompute.rs  primitives.rs  traits.rs
