[package]
name = "reductive"
version = "0.5.0"
edition = "2018"
authors = ["Daniël de Kok <me@danieldk.eu>"]
license = "Apache-2.0"
description = "Optimized vector quantization for dense vectors"
documentation = "https://docs.rs/reductive/"
homepage = "https://github.com/finalfusion/reductive"
repository = "https://github.com/finalfusion/reductive"

[dependencies]
ndarray = { version = "0.14", features = [ "approx", "rayon" ] }
num-traits = "0.2"
ordered-float = "2"
log = "0.4"
rand = { version = "0.8", features = [ "small_rng" ] }
rand_core = "0.6"
rand_xorshift = "0.3"
rayon = "1"

ndarray-linalg = { version = "0.13", optional = true }
lax = { version = "0.1", optional = true }

[dependencies.openblas-src]
version = "0.10"
optional = true
features = ["system"]

[dev-dependencies]
approx = "0.4"
rand_distr = "0.4"

[features]
default    = []
opq-train  = ["lax", "ndarray-linalg"]
openblas-test = ["opq-train", "openblas-src", "ndarray-linalg/openblas-system"]
