[package]
name = "reductive"
version = "0.9.0"
edition = "2018"
authors = ["Daniël de Kok <me@danieldk.eu>"]
license = "Apache-2.0"
description = "Optimized vector quantization for dense vectors"
documentation = "https://docs.rs/reductive/"
homepage = "https://github.com/finalfusion/reductive"
repository = "https://github.com/finalfusion/reductive"

[dependencies]
ndarray = { version = "0.15", features = [ "approx", "rayon" ] }
num-traits = "0.2"
ordered-float = "2"
log = "0.4"
rand = { version = "0.8", features = [ "small_rng" ] }
rand_chacha = "0.3"
rand_core = "0.6"
rand_xorshift = "0.3"
rayon = "1"
thiserror = "1"

accelerate-src = { version = "0.3", optional = true }
lax = { version = "0.2", optional = true }
ndarray-linalg = { version = "0.14", optional = true }

# Fix incompatibility between anyhow and intel-mkl tool. Remove with
# the next release of intel-mkl too. For more information, see:
# https://github.com/rust-math/intel-mkl-src/issues/68
anyhow = { version = "<=1.0.48", optional = true }

[dev-dependencies]
criterion = "0.3"
rand_distr = "0.4"

[features]
default    = []
opq-train  = ["lax", "ndarray-linalg"]
accelerate-test = ["opq-train", "accelerate-src"]
openblas-test = ["opq-train", "ndarray-linalg/openblas"]
intel-mkl-test = ["opq-train", "ndarray-linalg/intel-mkl", "anyhow"]

[[bench]]
name = "linalg"
harness = false

[[bench]]
name = "pq"
harness = false